--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/shahriar998/liri-node-app/issues"
   },
-  "homepage": "https://github.com/shahriar998/liri-node-app#readme"
+  "homepage": "https://github.com/shahriar998/liri-node-app#readme",
+  "dependencies": {
+    "axios": "^0.19.0",
+    "dotenv": "^8.0.0",
+    "node": "^12.7.0",
+    "node-spotify-api": "^1.1.1",
+    "spotifyapi": "^1.0.0"
+  }
 }
