package.json file

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/shahriar998/liri-node-app.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Shahriar Elias",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/shahriar998/liri-node-app/issues"
